--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+#\uD30C\uC77C \uD55C \uAC1C\uB2F9 \uCD5C\uB300 \uC0AC\uC774\uC988
+spring.servlet.multipart.maxFileSize=20MB
+#\uC694\uCCAD\uB2F9 \uCD5C\uB300 \uD30C\uC77C \uD06C\uAE30
+spring.servlet.multipart.maxRequestSize=100MB
+#\uC0C1\uD488 \uC774\uBBF8\uC9C0 \uC5C5\uB85C\uB4DC \uACBD\uB85C
+itemImgLocation=C:/shop/item
+#\uB9AC\uC18C\uC2A4 \uC5C5\uB85C\uB4DC \uACBD\uB85C
+uploadPath=file:///C:/shop/
