feat: 주문 이력 조회

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.servlet.multipart.maxRequestSize=100MB
 itemImgLocation=C:/shop/item
 #\uB9AC\uC18C\uC2A4 \uC5C5\uB85C\uB4DC \uACBD\uB85C
 uploadPath=file:///C:/shop/
+
+#\uAE30\uBCF8 batch size \uC124\uC815
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
