--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
-server.port = 80
-
+server.port=80
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
-
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.orm.jdbc.bind=trace
+spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
 spring.servlet.multipart.maxFileSize=20MB
 spring.servlet.multipart.maxRequestSize=100MB
 itemImgLocation=C:/shop/item
 uploadPath=file:///C:/shop/
-
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
-
 spring.output.ansi.enabled=always
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-exclude=static/**,public/**
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
